hphp/hack/test/typecheck/global_const8.php.exp
File "global_const8.php", line 3, characters 17-23:
Expected constant expression for initializer (Parsing[1002])
File "global_const8.php", line 3, characters 17-23:
Illegal constant value (Naming[2023])
