hphp/hack/test/typecheck/global_const8.php
<?hh

const mixed X = $x->foo;
